--- a/doc/画面設計.md
+++ b/doc/画面設計.md
@@ -10,15 +10,58 @@
 
 #### 1.2.1. タイトル
 
+- 概要
+  - 画像差し込む
+    - 型
+  - Image
+
 #### 1.2.2. スタート
+
+- 概要
+  - ゲーム画面へ遷移するボタン
+- 型
+  - Button
 
 #### 1.2.3. ゲームスピード
 
+- 概要
+  - ラベル
+- 型
+  - Text
+
 #### 1.2.4. メーター
+
+- 概要
+  - ゲームスピードを20段階で表示する
+  - スライドでゲームスピードを変更する
+  - デフォルト：10
+- 型
+  - Slider
 
 #### 1.2.5. おじゃまパネル
 
+- 概要
+  - ラベル
+- 型
+  - Text
+
 #### 1.2.6. おじゃま有無
+
+- 概要
+  - ゲーム中におじゃまパネルを降らせるかを設定する
+  - 有、無で切り替える
+  - デフォルト：無
+- 型
+  - Switch
+
+### 1.3. アクション設計
+
+|アクション名|アクションの詳細|
+|:-:|:-:|
+|初期表示|スタート画面を表示する|
+|`スタート`をタップ|ゲーム画面へ遷移する|
+|`メーター`をスライド|ゲームスピードを変更する|
+|`おじゃま有無`をタップ|おじゃまパネルを有無を切り替える|
 
 ## 2. ゲーム画面
 
@@ -30,22 +73,105 @@
 
 #### 2.2.1. おじゃまパネル予告
 
+- 概要
+  - 降ってくるおじゃまパネルの量を表示する
+- 型
+  - Image
+
 #### 2.2.2. フィールド
+
+- 概要
+  - 13行×6列
+  - 1行目のパネルは操作不可
+  - おじゃまパネルは上から降る
+  - ダブルタップでポーズ
+  - 下から上へのスライドでパネルをせり上げる
+- 型
+  - Canvas?
 
 #### 2.2.3. カーソル
 
+- 概要
+  - 1行×2列
+  - タップで表示
+  - 左右のスライドでパネルを入れ替える
+- 型
+  - Canvas?
+
 #### 2.2.4. タイム
+
+- 概要
+  - ラベル
+- 型
+  - Text
 
 #### 2.2.5. タイム値
 
+- 概要
+  - 経過時間
+  - 00:00で表示
+  - 上限 99:99
+- 型
+  - Text
+
 #### 2.2.6. ストップ
+
+- 概要
+  - ラベル
+- 型
+  - Text
 
 #### 2.2.7. 停止時間
 
+- 概要
+  - パネルをせり上げを止める時間を表示する
+  - 2連鎖以上もしくは4個以上の同時消しを行った場合に停止時間が付与される
+  - 最大15秒?
+- 型
+  - Text
+
 #### 2.2.8. スピードレベル
+
+- 概要
+  - ラベル
+- 型
+  - Text
 
 #### 2.2.9. スピードレベル値
 
+- 概要
+  - 現在のスピードレベルを表示する
+- 型
+  - Text
+
 #### 2.2.10. スコア
 
+- 概要
+  - ラベル
+- 型
+  - Text
+
 #### 2.2.11. スコア値
+
+- 概要
+  - 現在のゲームスコアを表示する
+- 型
+  - Text
+
+#### 2.2.12. 戻る
+
+- 概要
+  - スタート画面に戻る
+- 型
+  - Button
+
+### 2.3. アクション設計
+
+|アクション名|アクションの詳細|
+|:-:|:-:|
+|初期表示|ゲーム画面を表示する<br>6行×6列にパネルを生成する<br>ゲームを開始する|
+|画面をダブルタップ|ゲームをポーズする<br>ポーズ中はポーズ解除する|
+|フィールドをタップ|タップ中カーソルを表示する|
+|(タップ状態で)<br>フィールドを左右にスライド|パネルを左右に入れ替える|
+|(タップ状態で)<br>フィールドを上にスライド|パネルをせり上げるスピードを上げる|
+|`戻る`をタップ|スタート画面に遷移する|
